# IngeHack-CTF-2021

./: README.md
crypto/: README.md
crypto/Climber/: cipher  flag.txt  key.txt
crypto/EncryptionService/: flag.txt  requirements.txt  server.py  solve.py
crypto/PaddedSecretKeeper/: Dockerfile  flag.txt  server.py  solve.py
crypto/PaddedSecretKeeper2/: Dockerfile  flag.txt  server.py  solve.py  solve_sage.sage  start.sh
crypto/RobinTheReaper/: cipher  encrypt.py  flag.txt  pubkey.pem
crypto/ingehackStation/: Dockerfile  flag.txt  requirements.txt  solution.py  start.sh  station.py
forensics/: README.md
forensics/14MBLUE/: README.md  coms  flag  solve.py  tmp.py
forensics/exfiltrationART/: README.md
forensics/manifesto/: README.md
misc/: README.md
misc/IngeJail/: Dockerfile  README.md  bot.py  flag.txt  requirements.txt
misc/catAAS/: Dockerfile  README.md  docker-compose.yml
misc/f-leaker/: README.md
misc/lovni/: README.md
misc/pretoria/: Dockerfile  docker-compose.yml
misc/stegCloak/: cover.txt  output.txt  secret.txt
misc/twitter/: README.md
misc/vechea_scoala/: FILE.BAS
pwn/: README.md
pwn/encryptor/challenge/ingecryptor/: CMakeLists.txt  setup.py
pwn/encryptor/challenge/ingecryptor/src/: main.cpp
rev/: README.md
rev/LUNARWINDS/: README.md
rev/bitwiser/: README.md
rev/deceiver/: README.md
rev/hasher/: README.md
rev/seruro/: README.md
web/: README.md
web/apollo/: README.md
web/ez_login/: Dockerfile  README.md  docker-compose.yml  index.js  package.json
web/inge_ction/: README.md
web/jongoo/: Dockerfile  (+3 more)
(+136 files in other folders)
